[tool.poetry]
name = "mdm"
version = "0.1.0"
description = ""
authors = ["Health Samurai <hello@health-samurai.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
requests = "^2.28.1"
sqlglot = "5.1.0"
setuptools = "^65.6.3"
jsonschema = "^4.17.3"
duckdb = "^0.6.1"
jinja2 = "^3.1.2"
vega = "^3.6.0"
altair = "^4.2.0"
edn-format = "^0.7.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
ipykernel = "^6.19.2"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
